<resources>
    <string name="label">stockexchange</string>
    <string name="question1">1. What is the stock market? A place where you can........</string>
    <string name="answer1a">buy and sell pieces of companies.</string>
    <string name="answer1b">have fun and do sport.</string>
    <string name="answer1c">only buy things not sell them</string>
    <string name="question2">2. When the prices go up, you better ............ the market.</string>
    <string name="answer2a">short</string>
    <string name="answer2b">long</string>
    <string name="answer2c">not do anything</string>
    <string name="question3">3. What does the bull stand for?</string>
    <string name="answer3a">The stocks are falling.</string>
    <string name="answer3b">The stocks are rising up.</string>
    <string name="answer3c">The stock market is flat.</string>
    <string name="question4">4. What does the bear stand for?</string>
    <string name="answer4a">The stocks are falling.</string>
    <string name="answer4b">The stocks are rising up.</string>
    <string name="answer4c">The stocks are not setting any direction</string>
    <string name="question5">5. Which one of them is a commodity?</string>
    <string name="answer5a">Paper</string>
    <string name="answer5b">Medicine</string>
    <string name="answer5c">Crude oil</string>
    <string name="question6">6. What is the abbreviation of IPO?</string>
    <string name="answer6a">Initial Public Offering</string>
    <string name="answer6b">International Public Organization</string>
    <string name="answer6c">Intellectual Private Organization</string>
    <string name="question7">7. What is the abbreviation of SPO?</string>
    <string name="answer7a">Service Public Office</string>
    <string name="answer7b">Special Projects Office</string>
    <string name="answer7c">Secondary Public Offering</string>
    <string name="question8">8. Where is NASDAQ located?</string>
    <string name="answer8a">Mumbay</string>
    <string name="answer8b">Budapest</string>
    <string name="answer8c">New York</string>
    <string name="question9">9. Where is LSE located?</string>
    <string name="last">Write your answer</string>
    <string name="submit_button">Results</string>
    <string name="submit_button2">Try again</string>
</resources>
